--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
+.Login {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loginbox {
+  border: solid;
+  padding: 2%;
+}
+.key {
+  font-family: "Cinzel", serif;
+  margin-bottom: 10%;
+  text-decoration: underline;
+  text-align: center;
+  font-size: 30px;
+}
+.keysub {
+  font-family: "Josefin Sans", sans-serif;
+  margin-bottom: 5%;
+  font-size: 20px;
+}
+.keysubmit {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#loginsubmit {
+  border: solid 1px black;
+  background-color: lightseagreen;
   color: white;
+  border-radius: 3px;
+  font-size: 20px;
+  font-family: "Josefin Sans", sans-serif;
 }
-
-.App-link {
-  color: #61dafb;
+#logintext,
+#loginpassword {
+  border: solid 2px rgb(19, 18, 18);
+  border-radius: 2px;
+  height: 20px;
+  font-family: "Josefin Sans", sans-serif;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logintext {
+  font-size: 13px;
+  font-family: "Josefin Sans", sans-serif;
+  text-align: center;
+  margin-top: 4%;
 }
+/* /////////////////////// */
