--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,62 @@
   margin-top: 4%;
 }
 /* /////////////////////// */
+.title {
+  font-size: 20px;
+  font-weight: bolder;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  margin-top: 2%;
+  text-align: center;
+  text-decoration: underline;
+}
+.urls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.urlbox {
+  margin-top: 1%;
+  border: solid 1px black;
+  padding: 2%;
+}
+.urltext,
+.shortsubmit {
+  text-align: center;
+}
+#urltext {
+  height: 20px;
+  border: solid 1px black;
+  border-radius: 3px;
+  margin-bottom: 2%;
+}
+#shortsubmit {
+  border: solid 1px black;
+  background-color: black;
+  color: white;
+  font-size: 20px;
+  border-radius: 6px;
+}
+/*///////////////URLTABLE/////////// */
+.urltable {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1%;
+  margin-bottom: 2%;
+}
+
+.key {
+  text-align: center;
+  font-weight: 900;
+}
+.keyans {
+  text-align: center;
+}
+table,
+thead,
+tbody,
+td,
+tr {
+  border: solid 1px black;
+  border-collapse: collapse;
+}
